assets/css/styles.css
* {
  font-family: "Lato", sans-serif;
  text-align: center;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}



main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  min-height: 100vh;
  min-width: 100vw;
  background: linear-gradient(350deg, #2272ff, #b414b2, #232f3e);
  background-size: 600% 600%;
  -webkit-animation: AnimationName 34s ease infinite;
  -moz-animation: AnimationName 34s ease infinite;
  animation: AnimationName 34s ease infinite;
}

hr {
  background: none;
  clear: both;
  float: none;
  width: 100%;
  height: 1px;
  border: none;
  margin: -1px 0;
}

@-webkit-keyframes AnimationName {
  0% {
    background-position: 93% 0%;
  }
  50% {
    background-position: 0% 100%;
  }
  100% {
    background-position: 93% 0%;
  }
}
@-moz-keyframes AnimationName {
  0% {
    background-position: 93% 0%;
  }
  50% {
    background-position: 0% 100%;
  }
  100% {
    background-position: 93% 0%;
  }
}
@keyframes AnimationName {
  0% {
    background-position: 93% 0%;
  }
  50% {
    background-position: 0% 100%;
  }
  100% {
    background-position: 93% 0%;
  }
}

header {
  background-color: #131515;
}

.nav-item a {
  color: whitesmoke;
  text-decoration: none;
  font-size: 14.832px;
}

.nav-bar {
  display: flex;
  min-height: 70px;
  min-width: 100vw;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 60px;
}

.nav-title {
  color: whitesmoke;
  text-decoration: none;
  font-size: 24px;
}

.hamburger {
  display: none;
  cursor: pointer;
}

#projects {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#projects h2 {
  font-family: "Lato", sans-serif;
  color: whitesmoke;
  text-align: center;
  padding-top: 15vh;
}

.project-1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90vw;
}

.project-1 h3 {
  font-family: "Karla", sans-serif;
  color: whitesmoke;
  text-align: center;
  margin: 16px;
  font-size: 16px;
}

.project-1 a {
  flex-basis: 100%;
  width: 90vw;
}

.project-1 img {
  width: 400px;
  height: 400px;
  border-radius: 7px;
  border: 2px solid #131515;
  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
}

.other-projects {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
  width: 100%;
  box-sizing: none;
  padding-bottom: 100px;
}
.project {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 300px;
  padding-top: 2rem;
}

.project h3 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  font-family: "karla", sans-serif;
  color: whitesmoke;
  text-align: left;
  margin: auto;
  font-size: 16px;
  text-align: center;
  padding: 16px;
}

.project-img {
  width: 300px;
  height: 300px;
  border-radius: 7px;
  border: 2px solid #131515;
  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
}

#contact-me {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 70px;
  width: 100vw;
  color: whitesmoke;
  background-color: #131515;
}

.icons-section {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.icon-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0.5rem;
}

#contact-me h3 {
  font-size: 14.832px;
  padding-right: 3rem;
}

.icon-container img {
  width: 24px;
  height: 24px;
  filter: invert(1);
}

.icon-container figcaption {
  font-size: 14.832px;
}

#about-me {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: 200px;
}

.profile-pic {
  width: 300px;
  height: 300px;
  border-radius: 7%;
  border: 2px solid #131515;
  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
  margin: 32px;
}

#about-me section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.about-me-title {
  color: whitesmoke;
}

.about-me-text {
  font-family: "Karla", sans-serif;
  color: whitesmoke;
  text-align: left;
  margin-top: 16px;
  max-width: 500px;
}

@media screen and (max-width: 1200px) {
  main {
    width: 100vw;
  }
  .profile-pic {
    width: 200px;
    height: 200px;
    margin-top: 15vh;
  }

  #about-me section {
    margin: 5%;
    align-items: center;
    justify-content: ;
  }

  #about-me {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 16px;
  }

  .about-me-text {
    font-size: 14px;
    text-align: left;
    padding-top: 16px;
  }

  .nav-title {
    font-size: 20px;
  }

  #contact-me h3 {
    font-size: 16px;
    padding-right: 2rem;
  }

  .bar {
    display: block;
    width: 35px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: whitesmoke;
  }

  .hamburger {
    display: block;
  }

  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .nav-menu {
    position: fixed;
    left: -100%;
    top: 70px;
    gap: 0;
    flex-direction: column;
    background-color: #131515;
    width: 100vw;
    text-align: center;
    transition: 0.3s;
  }

  .nav-item {
    margin: 16px;
  }

  .nav-menu.active {
    left: 0;
  }

  .project-1 img{
    width: 300px;
    height: 300px;
  }

  .project-img {
    width: 200px;
    height: 200px;
  }
}

